k8s/intermediate/wordpress/advanced/wp-mariadb-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-mariadb-dep
  labels:
    app: wordpress

spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      module: database
  template:
    metadata:
      name: wp-mariadb-pod
      labels:
        app: wordpress
        module: database
    spec:
      containers:
        - name: mariadb
          image: mariadb:10
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: wp-mariadb-svc
  labels:
    app: wordpress
spec:
  type: ClusterIP
  selector:
    app: wordpress
    module: database
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
