k8s/intermediate/wordpress/advanced/wp-wordpress-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-wordpress-dep
  labels:
    app: wordpress

spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
      module: web
  template:
    metadata:
      labels:
        app: wordpress
        module: web
    spec:
      containers:
        - name: wp-wordpress-pod
          image: wordpress:5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wp-wordpress-svc
  labels:
    app: wordpress
spec:
  type: NodePort
  selector:
    app: wordpress
    module: web
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30088
      protocol: TCP
      name: http80
