k8s/intermediate/wordpress/advanced/wp-nginx-kic.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: wp-nginx-ic
spec:
  controller: nginx.org/ingress-controller
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:
